# total-perspective-vortex

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AUDIT_FIXES.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_2025_12_11.md  EXPERIMENTAL_RESULTS.md  README.md  RESULTS.md  VISUALIZATION.md  demo_plots.py  demo_raw_signal.py  mybci.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_experiments.sh  setup.cfg
src/: __init__.py  constants.py  display.py  features.py  mybci.py  mycsp.py  pipeline.py  predict.py  preprocess.py  train.py  visualization.py
src/classifiers/: __init__.py  nearest_centroid.py
src/features/: __init__.py  bandpower.py  flatten.py  logvariance.py  psd.py  wavelet.py
src/models/: model_s4_r14_csp_lda.pkl
src/training/: __init__.py  comparison.py  core.py  persistence.py  subject.py
src/transforms/: __init__.py  csp.py  linalg.py  pca.py
src/visualization/: __init__.py  _base.py  advanced_metrics_plots.py  comparison_plots.py  csp_plots.py  cv_plots.py  learning_curve_plots.py  metrics_plots.py
tests/: __init__.py  conftest.py  test_constants.py  test_display.py  test_features.py  test_mybci.py  test_mycsp.py  test_pipeline.py  test_predict.py  test_preprocess.py  test_train.py
tests/classifiers/: test_nearest_centroid.py
tests/features/: __init__.py  test_bandpower.py  test_flatten.py  test_logvariance.py  test_psd.py  test_sklearn_compat.py  test_wavelet.py
tests/pipeline/: __init__.py  test_bonus_pipelines.py  test_csp_pipelines.py  test_factory.py  test_feature_pipelines.py  test_integration.py
tests/transforms/: __init__.py  test_csp.py  test_linalg.py  test_pca.py  test_sklearn_compat.py
tests/visualization/: test_new_plots.py
