[project]
name = "total-perspective-vortex"
version = "0.1.0"
description = "EEG Brain-Computer Interface for motor imagery classification"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "mne>=1.6",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
