# Setup configuration for Total Perspective Vortex

[metadata]
name = total-perspective-vortex
version = 0.1.0
description = EEG Brain-Computer Interface for motor imagery classification
author = Your Name
python_requires = >=3.9

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
strict_optional = True
ignore_missing_imports = True

# Specific module ignores
[mypy-mne.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True
